fixed carousel distortion

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .carousel-item {
-	height: 100vh;
+	height: 90vh;
 	max-width: 100%;
 	background-size: cover;
 	background-position: center center;
@@ -242,7 +242,7 @@ body {
 		height: 80vh;
 	}
 	.carousel-6-img img {
-		object-fit: fill;
+		object-fit: contain;
 		padding-top: 0px;
 		display: inline-block;
 		margin: auto;
@@ -485,13 +485,6 @@ textarea {
 	margin-top: 5px;
 }
 
-/* Location, Phone, Email Section */
-/* .contact-list {
-	list-style-type: none;
-	margin-left: -30px;
-	padding-right: 20px;
-} */
-
 .contact-list {
 	list-style-type: none;
 	margin-left: -110px;
@@ -656,6 +649,7 @@ hr {
 
 	.sponsors {
 		padding-top: 0px;
+		height: 65vh;
 	}
 
 	.contact-text {
@@ -681,6 +675,14 @@ hr {
 	.carousel-6-img {
 		height: 50vh;
 		/* background-size: contain; */
+	}
+
+	.carousel-6-img img {
+		margin-top: 10%;
+	}
+
+	.carousel-item {
+		height: 60vh;
 	}
 
 	.carousel-caption h3,
@@ -745,9 +747,15 @@ hr {
 		flex: 0 0 40%;
 		margin: 0;
 	}
-
+	/* 
 	.carousel-6-img {
 		height: 35vh;
+	} */
+
+	.carousel-item {
+		padding-top: 2vh;
+		height: 40vh;
+		background-attachment: scroll;
 	}
 
 	#contact {
@@ -824,6 +832,10 @@ hr {
 
 	.sponsors h2 {
 		font-size: 23px;
+	}
+
+	.carousel-6-img img {
+		margin-top: 20%;
 	}
 
 	.srm-about h2 {
